--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "region": "us-east-1",
-  "accessKeyId": "YOUR_ACCESS_KEY_ID",
-  "secretAccessKey": "YOUR_SECRET_ACCESS_KEY"
+  "region": "sa-east-1",
+  "accessKeyId": "AKIATCKARROEMQMS4RKM",
+  "secretAccessKey": "WXYQAu0A7jRWzFObH8ei27tmtkx1KCopmfiALDHX"
 }
